syntax = "proto3";

message Empty {}

message Scooter {
  string id = 1;
}

message ScootersList {
  repeated Scooter scooter = 1;
}

service ScootersService {
    rpc getScootersIds (Empty) returns (ScootersList) {}
}